prod_snapshot_2015-09-24_1030/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Credit_Score_Code__c</fullName>
        <label>Credit Score Code</label>
        <picklist>
            <picklistValues>
                <fullName>A+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_s_Competitors__c</fullName>
        <label>Customer&apos;s Competitors</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DC_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gannett Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Digital Fulfillment Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DC_Vendor__c</fullName>
        <label>DC Vendor #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNC__c</fullName>
        <formula>IF(Do_Not_Call__c=true, IMAGE(&quot;/img/msg_icons/error32.png&quot;, &quot;Do Not Call&quot;, 32, 32), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <label>DUNS#</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Employee_Count__c</fullName>
        <label>D&amp;B Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_B_SIC_Code__c</fullName>
        <label>D&amp;B SIC Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Sales_Volume__c</fullName>
        <label>D&amp;B Sales Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Created__c</fullName>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Modified__c</fullName>
        <formula>TODAY() - DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Modified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DealChicken_Company_Type__c</fullName>
        <label>DealChicken Company Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trusted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dial_Attempts__c</fullName>
        <label>Dial Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Digital_Opps__c</fullName>
        <label>Digital Opps</label>
        <summaryFilterItems>
            <field>Opportunity.Digital_Products_Notice__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Digital Fulfillment, SML Opportunity</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2012</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Duplicate USCP Record checkbox for Account (equals true if there are two identical accounts across the orgs) populated by Jitterbit</description>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expectations_Success_Metrics__c</fullName>
        <label>Expectations &amp; Success Metrics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Facebook_Ads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facebook Ads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facebook_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Facebook Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (First Company)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Franchise_Indicator__c</fullName>
        <label>Franchise Indicator</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Affiliated_Partner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GO Affiliated Partner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gross_Revenues__c</fullName>
        <label>Gross Revenues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Has_Open_Opps__c</fullName>
        <label>Has Open Opps</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>High_Income_Exec__c</fullName>
        <label>High Income Exec</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Sync_From_HubSpot__c</fullName>
        <description>This is for HubSpot use only</description>
        <label>Sync From HubSpot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry_General__c</fullName>
        <label>Industry General</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales/Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Specific__c</fullName>
        <label>Industry Specific</label>
        <picklist>
            <controllingField>Industry_General__c</controllingField>
            <picklistValues>
                <fullName>Aerospace/Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assisted Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing/Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College/Trade Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collegiate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consignment/Pawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetic Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Care/Pre-School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy/Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fitness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flooring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funeral Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Security</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InfoUSA_Employee_Code__c</fullName>
        <label>InfoUSA Employee Code</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InfoUSA_Employee_Count__c</fullName>
        <label>InfoUSA Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InfoUSA_Employee_Range__c</fullName>
        <label>InfoUSA Employee Range</label>
        <picklist>
            <picklistValues>
                <fullName>1 TO 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 TO 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 TO 19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 TO 49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 TO 99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 TO 249</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250 TO 499</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500 TO 999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1,000 TO 4,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5,000 TO 9,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InfoUSA_SIC_Code__c</fullName>
        <label>InfoUSA SIC Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InfoUSA_Sales_Volume_Code__c</fullName>
        <label>InfoUSA Sales Volume Code</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InfoUSA_Sales_Volume__c</fullName>
        <label>InfoUSA Sales Volume Range</label>
        <picklist>
            <picklistValues>
                <fullName>OVER $1 BILLION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500M - $1 BILLION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100-500 MILLION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50-100 MILLION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$20-50 MILLION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10-20 MILLION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5-10 MILLION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$2.5-5 MILLION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1-2.5 MILLION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500,000-1 MILLION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LESS THAN $500,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Integrated_SF_ID__c</fullName>
        <description>Duplicate USCP Record Id for Account (if any) populated by Jitterbit</description>
        <label>Integrated SF ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSBD__c</fullName>
        <formula>Last_Schedule_Bill_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LSBD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Datetime__c</fullName>
        <description>Notes the datetime of the most recently added activity.</description>
        <label>Last Activity Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Close_Won_Date__c</fullName>
        <label>Last Close Won Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>DealChicken</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Rep_Sum_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Rep Sum Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Rep_Summary__c</fullName>
        <label>Last Rep Summary</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Schedule_Bill_Date__c</fullName>
        <label>Last Schedule Bill Date</label>
        <summarizedField>Opportunity.Last_Schedule_Bill_Date__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Latest_Closed_Won_Date_DC__c</fullName>
        <label>Latest Closed Won Date DC</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>DealChicken</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Latest_Opp_Activity__c</fullName>
        <label>Latest Opp Activity</label>
        <summarizedField>Opportunity.Last_Activity_Datetime__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Legacy_Account_Number__c</fullName>
        <label>Legacy Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACTIVE_Account_ID__c</fullName>
        <label>MACTIVE Account ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACTIVE_Account_Number__c</fullName>
        <label>MACTIVE Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mactiv_Account__c</fullName>
        <label>Mactiv Account #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mactive_Account_Type__c</fullName>
        <label>Mactive Account Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mark__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temp Field To Mark For Reporting Purposes</description>
        <label>Mark</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Health_LastUpdated__c</fullName>
        <description>Field should be updated by whatever appropriate means in Salesforce automatically. Field should be updated when a user updates the &quot;Market_Health__c&quot; field from null to a value or from one value to a different value after committing the Save of a record.</description>
        <label>Company Health - Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Market_Health__c</fullName>
        <inlineHelpText>•Green: Client has no major concerns.
•Yellow: Client has some concerns and is working through resolution.
•Orange: Client has some serious concerns. Issue resolution is not satisfactory.
•Red: Client is very unhappy and is on the verge of cancelling.</inlineHelpText>
        <label>Company Health</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_List__c</fullName>
        <label>Market List</label>
        <picklist>
            <picklistValues>
                <fullName>Appleton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asbury Park, NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asheville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binghamton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brevard/Space Coast, FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buffalo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burlington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Jersey, NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Ohio, MNCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Wisconsin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cincinnati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleveland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detroit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Wisconsin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fort Collins, CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ft Myers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grand Rapids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great Falls, MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Bay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greensboro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indianapolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa City, IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jackson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jacksonville</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Originator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sponsored Accounts</relationshipLabel>
        <relationshipName>RelatedCompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Record__c</fullName>
        <label>Market Record</label>
        <picklist>
            <picklistValues>
                <fullName>Asheville, NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlanta, GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangor, ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binghamton, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buffalo, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burlington, VT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Jersey, NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Minnesota, MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Ohio, MNCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Wisconsin, WI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cincinnati, OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleveland, OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Columbia, NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denver, CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines, IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detroit, MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fort Collins, CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fox Cities, WI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ft Myers, FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grand Rapids, MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Bay, WI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenville, SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indianapolis, IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jackson, MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jacksonville, FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knoxville, TN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lafayette, IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lafayette, LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lansing, MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Little Rock, AR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Media_Property_Id__c</fullName>
        <formula>Market_Originator__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media Property Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Property_List__c</fullName>
        <formula>IF(NOT(CONTAINS( Name ,&quot;Clipper&quot;)),

BillingState &amp; &quot;, &quot; &amp;  LEFT( Name, (FIND( &quot;,&quot;,Name))-1 ),

BillingState &amp; &quot;, Clipper &quot; &amp; BillingCity)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media Property List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Property_Name__c</fullName>
        <formula>Market_Originator__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media Property Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newspaper_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Newspaper History</label>
        <referenceTo>Newspaper_History__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OLI_Num_Active__c</fullName>
        <label>Active OLI&apos;s</label>
        <summarizedField>Opportunity.OLI_Num_Active__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.OLI_Num_Active__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opps_Num_Active__c</fullName>
        <label>Active Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.OLI_Num_Active__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Detail__c</fullName>
        <label>&quot;Other&quot; Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>